# TupiEngine

./: Documentação.md  FUNDAMENTOS.md  LICENSE.md  Makefile  README.md  compile_shaders.bat  compile_shaders.sh  main.lua
src/: CMakeLists.txt  Engine.c  Engine.cpp  Engine.h  Engine.hpp  Engine_events.cpp  Engine_renderer.cpp  IRenderer.hpp  RendererDX11.cpp  RendererDX11.hpp  engine.lua  engineffi.lua  fov.cpp  fov.hpp  mapa.cpp  mapa.hpp  mapa.lua  parallax.lua
src/FAR/: fov.cpp  fov.hpp  mapa.hpp  mapa.lua  parallax.lua
src/Renderizador/: IRenderer.hpp  RendererDX11.cpp  RendererDX11.hpp  RendererGL.cpp  RendererGL.hpp  RendererVK.cpp  RendererVK.hpp  shaders_embedded.hpp
